# models/eventmodels.go
@@ -408,3 +408,24 @@ func UpdatePembayaran(Booking_code string, Id_pembayarans int64, Id_status_pemba
 
 	return rowsAffected
 }
+
+func UpdateBuktiPembayaran(Booking_code string, Bukti_pembayaran string) int64 {
+	db := config.CreateConnection()
+	defer db.Close()
+
+	sqlStatement := `UPDATE registrasi_events SET bukti_pembayaran_registrasi_events=$2 WHERE no_registrasi_events=$1`
+
+	res, err := db.Exec(sqlStatement, Booking_code, Bukti_pembayaran)
+	if err != nil {
+		log.Fatalf("Tidak bisa mengeksekusi query. %v", err)
+	}
+
+	rowsAffected, err := res.RowsAffected()
+	if err != nil {
+		log.Fatalf("Error ketika mengecheck rows/data yang diupdate. %v", err)
+	}
+
+	fmt.Printf("Total rows/record yang diupdate %v\n", rowsAffected)
+
+	return rowsAffected
+}
